--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -30,13 +30,14 @@
 }
 
 .NavBar > div {
-    width: 60vh;
+    width: calc(calc(100% - 92vh) / 2) ;
     display: flex;
+    justify-content: center;
 }
-
+/* 
 .NavBar #loginNav {
     justify-content: flex-end;
-}
+} */
 
 .NavBar h3, .NavBar a {
     color: black;
@@ -47,7 +48,7 @@
     margin: 0;
 }
 
-.NavBar h3:hover {
+#loginNav h3:hover {
     cursor: pointer;
 } 
 
